style.css
*{
    list-style-type: none;
    font-family:monospace;
    padding: 0;
    margin: 0;
    font-weight:bolder;
    box-sizing: border-box;

}

body{
    display: flex;
    height: 100vh;
    width: 100vw;
    margin: 0;
    background-color:rgb(142, 175, 175)
}

.titulo{
    position: absolute;
    text-align: center;
    margin-bottom: 20px;
    font-size: 30px;
    color: white;
    text-shadow: rgb(0, 0, 0) 2px 1px 6px;
}
.container_1{
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #383a3d;
    width: 50%;
    overflow: hidden;
}

.subcontainer_1{
    width: 70%;
    width: 80%;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

.container_2{
    border-left: 5px solid hsl(0, 0%, 100%);
    width: 50%;
    background-color: #e8f0ed;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.subcontainer_2{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 60%;
    height: 70%;
}


/*-----------------------Roleta----------------------------------*/
.roleta{
    width: 470px;
    height: 470px;
    border-radius: 50%;
    background-color: #c7c692;
    border: 5px solid hsl(0, 0%, 0%);
    box-shadow: 20px 40px 15px rgba(0, 0, 0, 0.466);
    position: relative;
    overflow: hidden;
}
.item{
    position: absolute;
    display: flex;
    text-align: center;
    align-items: center;
    justify-content: center;
    text-align: left;
    top: 50%;
    left: 50%;
    width: 50%;
    height: 58%;
    transform-origin: 0% 0%;
    border: #000000 3px solid;

}

.texto-item{

    color: rgb(255, 250, 250);
    text-shadow: rgb(0, 0, 0) 2px 1px 6px;
    position: relative;
    width: 100%;
    font-size: 21px;
    white-space: nowrap;
    margin-top: -90px;
    
}

.arrow-border {
    width: 60px;   
    height: 60px;
    position: absolute;
    top: -8px;
    clip-path: polygon(50% 100%, 0 0, 100% 0);
    background: rgb(0, 0, 0); 
}

.arrow{
    width: 43px;   
    height: 43px;
    position: absolute;
    top: 5px;
    left: 8.5px;  
    background: #65a4d8;
    clip-path: polygon(50% 100%, 0 0, 100% 0);
    box-shadow: 5px 5px 5px rgba(0,0,0,0.5); 
}
/*  #4CAF50;   */

.center-dot{
    position: absolute;
    padding: 20px 20px;
    background-color: #65a4d8;
    border-radius: 100%;
    border: 5px solid #000000   ;
    box-shadow: 5px 5px 1px rgba(0, 0, 0, 0.466);
}
.botao-girar{
    position: absolute;
    padding: 30px 20px;
    font-size: 16px;
    background-color: #65a4d8;
    color: white;
    border: 5px solid rgb(0, 0, 0);
    border-radius: 100%;
    cursor:pointer;
    box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.466);
    bottom: -10%;
}.botao-girar:hover{
    background-color: #076dc0;
}

/*-------------------------Formulario--------------------------------*/


table {
    border: 5px solid #0a0708;
    border-radius: 20px 20px 0px 0px;
    border-spacing: 0; 
    overflow: hidden; 

    font-size: 17px;
    width: 100%;
    height: 100%;
    color: rgb(255, 255, 255);
    box-shadow: 20px 67px 20px rgba(0, 0, 0, 0.466);
}

thead{background-color: #0a0708; }

tbody{background-color: #a9b0b1; }
td{
    padding:1%;
    width: 50%;
    text-align: center;
    border:1.55px solid #0a0708   ;

}

.formulario{

    display: flex;
    align-items: center;
    justify-content: center;
    border: 5px solid #0a0708;
    border-width: 0px 5px 5px 5px;
    border-radius: 0px 0px 20px 20px;
    width: 100%;
    height: 10%;
    
}
.btnExcluir{
    width: 100%;
    height: 100%;
    border-radius: 50px;
    color: #ffffff;
    border: 5px solid #0a0708;
    cursor: pointer;
    font-size: 17px;
    background-color: #ce5b5b;
}.btnExcluir:hover{
    background-color: #c51b1b;
}

#txtComida{
    background-color: #f8f8f8;
    height: 100%;
    width: 50%;
    border-radius: 0px 0 0 15px;

    text-align: center;
    color: rgb(0, 0, 0);
    font-size: 15PX;
    border-width: 0 0 2px 0;
}
.adicionar{
    width: 50%;
    height: 100%;
    cursor: pointer;
    color: white;
    background-color: #96c060;
    border-radius: 0px 0px 10px 0px;
    font-size: 17px;
    border-width: 0 0 0 2px;
}.adicionar:hover{
        background-color: #77b126;
}


@media(max-width:1080px){

    body{
        flex-direction: column;
        height: auto;
    }
    .container_2,.container_1{
        width: 100%;
        height: 100vh;
    }
    .roleta{
        width: 400px;
        height: 400px;
    }
    .subcontainer_2{
        width: 85%;
    }

    .botao-girar{
            bottom: -15%;
    }
}

@media(max-width:720px){
    .roleta{
        width: 300px;
        height: 300px;
    }

}


@media(max-width:360px){


    .botao-girar{
    padding: 20px 10px;

    }
    .center-dot{
    padding: 10px;
    }
}

